fix: fix password type and visibility

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -30,3 +30,9 @@ body {
   color: var(--foreground);
   background: var(--background);
 }
+
+@layer utilities {
+  .hidden-password {
+    @apply [-webkit-text-security:disc];
+  }
+}
